tests/error/modifier_errors/flag_classic_fun_dagger_nested2.err
Error: Unitary constraint violation (at $FILE:12:4)
   | 
10 | @guppy(unitary=True)
11 | def test() -> None:
12 |     foo()
   |     ^^^^^ This function cannot be called in a unitary context

Help: Consider adding the flag `(unitary=True)` to the decorator of the function
`foo`

Guppy compilation failed due to 1 previous error
